tests/tests/ui-stable/no-arguments.stderr
error: proc-macro derive panicked
  --> $DIR/no-arguments.rs:12:5
   |
12 |     indoc!();
   |     ^^^^^^^^^
   |
   = help: message: argument must be a single string literal, but got 0 tokens
   = note: this warning originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
